# robot-control

./: CMakeLists.txt  Main.qml  RobotControlInclude.cmake  engine.h  main.cpp
firmware/: platformio.ini
firmware/src/: MotorController.cpp  MotorController.h  RobotStepper.cpp  RobotStepper.h  SerialApiServer.cpp  SerialApiServer.h  main.cpp
robot-control/: CMakeLists.txt  application.cpp  application.h  engine.cpp  engine.h  main.cpp  robotcontroller.cpp  robotcontroller.h  robotcontrollerpacket.cpp  robotcontrollerpacket.h  robotcontrollerreply.cpp  robotcontrollerreply.h  robotserialinterface.cpp  robotserialinterface.h  serialportdevicewatcher.cpp  serialportdevicewatcher.h
robot-control/RobotModule/: CMakeLists.txt  engine.cpp  engine.h  robotcontroller.cpp  robotcontroller.h  robotcontrollerpacket.cpp  robotcontrollerpacket.h  uartinterface.cpp  uartinterface.h
robot-control/ui/: HomeView.qml  Main.qml  MainView.qml  SettingsView.qml
robot-control/ui/components/: RobotStatusBar.qml
robot-firmware/: platformio.ini
robot-firmware/src/: MotorController.cpp  MotorController.h  RobotStepper.cpp  RobotStepper.h  SerialInterface.cpp  SerialInterface.h  main.cpp
ui/: MainView.qml
